2006-12-17  Rob Buis  <buis@kde.org>

        Reviewed by Eric.

        Add missing checksum file, thnx to Wildfox for noticing.

        * svg/custom/sheet-title-expected.checksum: Added.

2006-12-17  Nikolas Zimmermann  <zimmermann@kde.org>

        Reviewed by Eric.

        Fixes: http://bugs.webkit.org/show_bug.cgi?id=10956

        Long standing regression.
        Update baseline for gradient-on-stroke-of-text. Works properly again.

        * svg/W3C-SVG-1.1/pservers-grad-08-b-expected.png:
        * svg/W3C-SVG-1.1/pservers-grad-11-b-expected.png:

2006-12-17  Nikolas Zimmermann  <zimmermann@kde.org>

        Reviewed by Rob.

        Fixes: http://bugs.webkit.org/show_bug.cgi?id=11813

        Update baseline after the SVGLength patch.
        * svg/W3C-SVG-1.1/coords-units-01-b-expected.png:

2006-12-16  Sam Weinig  <sam@webkit.org>

        Reviewed by Maciej.

        Update tests for http://bugs.webkit.org/show_bug.cgi?id=11856
        Update renderName() methods to return current class names.

        * dom/svg/level3/xpath/Conformance_ID-expected.txt:
        * editing/inserting/before-after-input-element-expected.txt:
        * editing/pasteboard/4806874-expected.txt:
        * editing/pasteboard/drop-text-without-selection-expected.txt:
        * editing/pasteboard/input-field-1-expected.txt:
        * editing/pasteboard/nested-blocks-with-text-area-expected.txt:
        * editing/pasteboard/nested-blocks-with-text-field-expected.txt:
        * editing/pasteboard/pasting-tabs-expected.txt:
        * editing/selection/3690703-2-expected.txt:
        * editing/selection/3690703-expected.txt:
        * editing/selection/3690719-expected.txt:
        * editing/selection/drag-select-1-expected.txt:
        * editing/selection/select-from-textfield-outwards-expected.txt:
        * fast/block/float/032-expected.txt:
        * fast/block/margin-collapse/103-expected.txt:
        * fast/css/resize-corner-tracking-expected.txt: