@@ -1,0 +1,15 @@
+<html>
+<head>
+<script>
+function test()
+{
+    window.parent.frame2.location = "set-unloaded-frame-location-2.html";
+}
+</script>
+</head>
+<body onload="test()">
+<p><a href="http://bugs.webkit.org/show_bug.cgi?id=7170">bug 7170</a></p>
+<p>This frame loads content into the adjacent frame using the syntax "window.parent.[frameName].location="</p>
+<p>If the test passes, you will see a "PASS" message in the adjacent frame, and a "PASS" alert should appear.</p>
+</body>
+</html>
