@@ -1,0 +1,10 @@
+<html>
+<body>
+<h3>PASSED: Content loaded</h3>
+<script>
+alert('PASS');
+if (window.layoutTestController)
+    layoutTestController.notifyDone();
+</script>
+</body>
+</html>
