@@ -1,0 +1,12 @@
+<html>
+<script>
+if (window.layoutTestController) {
+    layoutTestController.dumpAsText();
+    layoutTestController.waitUntilDone();
+}
+</script>
+<frameset cols="50%, *">
+<frame src="resources/set-unloaded-frame-location-1.html">
+<frame src="" name="frame2">
+</frameset>
+</html>
